--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,10 +44,16 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
+        
+        <p style="font-color:white;">Erstellt und betreut von <a href="https://daniel-jach.github.io/" target="_blank">Daniel Jach</a></p>
+        
+        <!--
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        -->
+        
       </footer>
     </div>
 
