--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,5 +68,10 @@
       </script>
     {% endif %}
   </body>
+  
+<script>
+document.getElementById("text").innerHTML = "Text added by JavaScript code";
+</script>
+  
 </html>
 
