--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,17 @@
   </body>
   
 
+
+
+<style>
+
+answer {
+  display: none;
+  color: green;
+}
+
+</style>
+
 <script>
 function showAnswersA() {
   var answers = document.querySelectorAll('.answersA');
