--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,12 +73,18 @@
 
 
 
-<!-- reveal hidden answers: style and javascript -->
-
 <style>
+
 answer {
   display: none;
   color: green;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 </style>
