--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,6 +82,14 @@ answer {
 
 </style>
 
+<style type="text/css">
+.centerImage
+{
+ text-align:center;
+ display:block;
+}
+</style>
+
 <script>
 function showAnswers() {
   var answers = document.querySelectorAll('.answers');
