--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,8 @@ answer {
 <style type="text/css">
 .centerImage
 {
- text-align:center;
+ margin-left: auto;
+ margin-right: auto;
  display:block;
  width:50%;
 }
