--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,6 +89,14 @@ function showAnswers() {
         answers[i].style.display = 'block';
     }
 }
+
+function showAnswersTable() {
+  var answers = document.querySelectorAll('.answersTable');
+    for (var i = 0; i < answers.length; i++) {
+        answers[i].style.display = 'block';
+    }
+}
+
 </script>
 
 
