--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,39 @@
       </script>
     {% endif %}
   </body>
+  
 
+
+
+
+<style>
+
+answer {
+  display: none;
+  color: green;
+}
+
+</style>
+
+<script>
+function showAnswers() {
+  var answers = document.querySelectorAll('.answers');
+    for (var i = 0; i < answers.length; i++) {
+        answers[i].style.display = 'block';
+    }
+}
+
+function showAnswersTable() {
+  var answers = document.querySelectorAll('.answersTable');
+    for (var i = 0; i < answers.length; i++) {
+        answers[i].style.display = 'block';
+    }
+}
+
+</script>
+
+
+
+  
 </html>
 
