reorganize folder structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,7 @@
 
 
 ...<script src="{{ base.url | prepend: site.url }}/assets/js/showAnswers.js"></script>...
+...<script src="{{ base.url | prepend: site.url }}/assets/js/randomQuestion.js"></script>...
 
   
 </html>
