--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,11 @@ answer {
   display: none;
   color: green;
 }
+
+#sentencebox {
+  color: #222222;
+  width: 100%;
+  background: transparent;
+  border: none;
+  font-size: xx-large;
+}
